<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="526dp"
        android:background="@color/appBg"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:background="@android:color/black"
            android:contentDescription="@string/appTitle"
            android:text="@string/appTitle"
            android:textColor="@color/txtCol"
            android:textSize="@dimen/headingSize" />

        <TextView
            android:id="@+id/subheading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/appTitle"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/subheading"
            android:text="@string/subheading"
            android:textColor="@color/txtCol"
            android:textSize="@dimen/txtSize" />

        <TextView
            android:id="@+id/tip1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/appTitle"
            android:layout_marginTop="116dp"
            android:contentDescription="@string/tip1"
            android:text="@string/tip1"
            android:textColor="@color/txtCol"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tip2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/appTitle"
            android:layout_marginTop="145dp"
            android:contentDescription="@string/tip2"
            android:text="@string/tip2"
            android:textColor="@color/txtCol" />

        <TextView
            android:id="@+id/tip3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/appTitle"
            android:layout_marginTop="171dp"
            android:contentDescription="@string/tip3"
            android:text="@string/tip3"
            android:textColor="@color/txtCol" />

        <TextView
            android:id="@+id/tip4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/appTitle"
            android:layout_marginTop="198dp"
            android:contentDescription="@string/tip4"
            android:text="@string/tip4"
            android:textColor="@color/txtCol" />

        <ImageView
            android:id="@+id/imagedescription1"
            android:layout_width="190dp"
            android:layout_height="211dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="83dp"
            android:contentDescription="@string/imagedescription1"
            app:srcCompat="@drawable/splitbill1" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="36dp"
            android:background="@color/btnBg"
            android:contentDescription="@string/btn1"
            android:text="@string/btn1"
            android:textColor="@color/txtCol"
            android:textSize="@dimen/btnSize" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>