<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplitBillActivity">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="526dp"
        android:background="@color/appBg"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="13dp"
            android:background="@android:color/black"
            android:contentDescription="@string/app_name"
            android:text="@string/app_name"
            android:textColor="@color/txtCol"
            android:textSize="@dimen/headingSize" />

        <TextView
            android:id="@+id/subheading2"
            android:layout_width="253dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="36dp"
            android:layout_marginTop="64dp"
            android:background="@color/btnBg"
            android:contentDescription="@string/subheading2"
            android:text="@string/subheading2"
            android:textColor="@color/txtCol"
            android:textSize="@dimen/txtSize" />

        <Spinner
            android:id="@+id/tipSelection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="29dp"
            android:layout_marginTop="137dp"
            android:entries="@array/tipchoices"
            android:spinnerMode="dropdown" />

        <EditText
            android:id="@+id/prompt3"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/subheading2"
            android:layout_alignTop="@+id/tipSelection"
            android:layout_marginEnd="-37dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/prompt3"
            android:ems="10"
            android:hint="@string/prompt3"
            android:inputType="number" />

        <TextView
            android:id="@+id/percentagesign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="19dp"
            android:layout_marginTop="151dp"
            android:contentDescription="@string/percentagesign"
            android:text="@string/percentagesign"
            android:textColor="@color/txtCol"
            android:textSize="@dimen/txtSize" />

        <EditText
            android:id="@+id/prompt2"
            android:layout_width="143dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/subheading2"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="-35dp"
            android:layout_marginTop="202dp"
            android:contentDescription="@string/prompt2"
            android:ems="10"
            android:hint="@string/prompt2"
            android:inputType="number"
            android:textColor="@color/txtCol" />

        <EditText
            android:id="@+id/prompt1"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/subheading2"
            android:layout_alignTop="@+id/prompt2"
            android:layout_marginStart="-3dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/prompt1"
            android:ems="10"
            android:hint="@string/prompt1"
            android:inputType="number"
            android:textColor="@color/txtCol" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="213dp"
            android:background="@color/btnBg"
            android:contentDescription="@string/btn2"
            android:text="@string/btn2"
            android:textColor="@color/txtCol"
            android:textSize="@dimen/txtSize" />

        <TextView
            android:id="@+id/result"
            android:layout_width="297dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/subheading2"
            android:layout_marginBottom="167dp"
            android:background="@color/btnBg"
            android:textColor="@color/txtCol"
            android:textSize="@dimen/txtSize" />

        <ImageView
            android:id="@+id/imagedescription2"
            android:layout_width="182dp"
            android:layout_height="91dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="36dp"
            android:contentDescription="@string/imagedescription2"
            app:srcCompat="@drawable/splitbill2" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>